cluster/apps/hundred/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hundred
  namespace: hundred
spec:
  selector:
    app: hundred
  ports:
    - name: http
      port: 80
      targetPort: http
