cluster/apps/hundred/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hundred
  namespace: hundred
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: beta.hundred.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hundred
                port:
                  name: http
  tls:
    - hosts:
        - beta.hundred.app
      secretName: hundred-tls
